2003-09-07  Mark Mitchell  <mark@codesourcery.com>

	* qm/fields.py (cStringIO): Do not import.
	(StringIO): Import.
	(tokenize): Import.
	(Field.FormatValueAsText): Use StringIO.
	(Field.ParseTextValue): Improve documentation.
	(SetField.FormatValueAsText): Make output match format expected 
	by ...
	(SetField.ParseTextField): ... this new method.
	* qm/test/cmdline.py (QMTest.attribute_option_spec): Generalize
	help text.
	* share/diagnostics/common.txt (invalid set value): New message.

	* NEWS: Mention correction of critical resource defect.

2003-09-05  Mark Mitchell  <mark@codesourcery.com>

	* qm/qm.sh (PYTHONPATH): Break "export PTYHONPATH=..." into two
	statements.

2003-08-29  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/target.py (Target.__init__): Do not set __resources.
	(Target.Start): Initialize __resources.
	(Target.Stop): Remove entries created by Target.Start.

	* GNUmakefile.in (check): Remove dependency on check-rsh.

	* README: Mention Win32 extensions and update reference to ZPL.
	* qm/external/DocumentTemplate/LICENSE.txt: New file.
	
2003-08-28  Stefan Seefeld  <stefan.seefeld@orthosoft.ca>

	* setup.py: Make documentation compliant with qmtest's standard.
	(qm_build_doc): Tidy up the code and make it more clear.
	(qm_build_doc): Use os.path.join and os.path.normpath for better
	portability.

2003-08-27  Stefan Seefeld  <seefeld@sympatico.ca>

	* setup.py: Add build_doc command.

2003-08-27  Stefan Seefeld  <seefeld@sympatico.ca>

	* setup.py: New file.
	* qm/__init__.py: Import qm.config for data path and version info.
	* qm/test/base.py: Add config.data_dir + '/test/classes' to search
	path.
	* qm/test/qmtest.py: Insert magic number so this becomes a real script.

2003-08-27  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/web/web.py (LoadContextPage.prompt): Fix quoting.

2003-08-20  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/cmdline.py (QMTest.__ExecuteCreate): Return 2 for
	failure, not 1.