@@ -1,0 +1,43 @@
+########################################################################
+#
+# File:   MANIFEST.in
+# Author: Stefan Seefeld
+# Date:   2003-08-28
+#
+# Contents:
+#   qmtest - Distutils distribution files
+#
+# Copyright (c) 2003 by CodeSourcery, LLC.  All rights reserved. 
+#
+# For license terms see the file COPYING.
+#
+########################################################################
+
+include ChangeLog COPYING README TODO
+include MANIFEST.in setup.py
+
+# These are the modules included in the 'qm' package.
+recursive-include   qm *.py
+include             qm/config.py
+# This is the main executable.
+include             qm/test/qmtest.py
+# These are all docs, in (docbook) xml, html, tex, and pdf format.
+include             qm/test/doc/*.xml
+include             qm/test/doc/html/*.html
+include             qm/test/doc/print/manual.tex
+include             qm/test/doc/print/manual.pdf
+recursive-include   doc *
+# These are data files used by various parts of QMTest.
+include             qm/test/classes/classes.qmc
+recursive-include   qm/test/share *
+recursive-include   share *
+recursive-include   templates *
+recursive-include   benchmarks *
+recursive-include   tests *
+recursive-include   scripts *
+# These are extension modules for the build system.
+recursive-include   qmdist *
+
+# Suppress cvs bookkeeping files.
+global-exclude */CVS/*
+
